# claw-code-rust

./: .gitignore  AGENTS.md  Cargo.toml  README.ja.md  README.md  README.ru.md  README.zh-Hans.md  README.zh-Hant.md  install.ps1  install.sh
crates/arg0/: Cargo.toml  README.md
crates/arg0/src/: lib.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: agent_command.rs  main.rs  prompt_command.rs  upgrade_command.rs
crates/cli/src/prompt_command/: prompt_routing_tests.rs
crates/client/: Cargo.toml  README.md
crates/client/src/: acp_fs.rs  acp_permissions.rs  acp_terminal.rs  client_core.rs  lib.rs  protocol_trace.rs  stdio.rs  websocket.rs
crates/code-search/: Cargo.toml
crates/code-search/src/: cache.rs  chunking.rs  dense.rs  files.rs  grammars.rs  index.rs  lib.rs  matrix.rs  ranking.rs  refresh.rs  semantic.rs  service.rs  tokens.rs  types.rs  watch.rs
crates/core/: Cargo.toml  models.json
crates/core/prompts/collaboration-mode/: build.md  plan.md
crates/core/prompts/research/: clarify.md  supervisor.md
crates/core/src/: collaboration_mode_prompts.rs  config_resolution.rs  context_pipeline.rs  durable_record.rs  execution.rs  hooks.rs  jsonl_store.rs  lib.rs  logging.rs  mcp.rs  model_binding.rs  model_preset.rs  query.rs  replay.rs  session.rs  skills.rs  tool_prompt.rs  update_check.rs
crates/core/src/context/: execution_context.rs  mod.rs
crates/core/src/conversation/: mod.rs  records.rs
crates/core/src/history/: compaction.rs  mod.rs  summarizer.rs
crates/core/src/hooks/: command.rs
crates/core/src/research/: prompts.rs
crates/core/src/state/: turn.rs
crates/core/src/tools/: client_terminal_shell.rs  deferred_loading.rs  glob.txt  grep.txt  hook_events.rs  mod.rs  registry.rs  registry_plan.rs  router.rs  skill.txt  webfetch.txt  write.txt
crates/core/src/tools/handlers/: agent.rs  apply_patch.rs  code_search.rs  exec_command.rs  file_write.rs  glob.rs  goal_update.rs  grep.rs  mcp.rs  mod.rs  plan.rs  question.rs  read.rs  (+4 more)
crates/core/tests/: real_llm_e2e.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  manager.rs
crates/network-proxy/: Cargo.toml  README.md
crates/network-proxy/src/: lib.rs
crates/provider/: Cargo.toml
crates/provider/src/: dsml.rs  hosted_tools.rs  http.rs  lib.rs  router.rs  timeout.rs
crates/provider/src/anthropic/: messages.rs  stream_usage.rs
crates/provider/src/openai/: chat_completions.rs  responses.rs
crates/provider/tests/: openai_chat_completions_stream.rs  openai_responses_stream.rs  provider_http.rs
crates/server/: AGENTS.md  Cargo.toml
crates/server/skills/.system/: .devo-system-skills.marker
crates/server/src/: approval_reviewer.rs  bootstrap.rs  connection.rs  db.rs  execution.rs  goal_durable.rs  lib.rs  persistence.rs  projection.rs  protocol.rs  provider_config.rs  runtime.rs  session.rs  session_context.rs  singleton.rs  subagent.rs  titles.rs  tool_actions.rs  transport.rs  turn.rs  windows_tray.rs
crates/server/src/runtime/: acp_fs.rs  acp_terminal.rs  active_turn.rs  agents.rs  approval.rs  command_exec.rs  connection.rs  goal_accounting.rs  goal_continuation.rs  goal_handlers.rs  handlers.rs  hooks.rs  items.rs  lifecycle.rs  model_api.rs  outbound.rs  provider_vendor_api.rs  reference_search.rs  research.rs  research_capture.rs  research_child_agents.rs  research_context.rs  research_events.rs  research_final_report.rs  research_formatting.rs  research_parsing.rs  research_session.rs  research_stages.rs  research_streaming.rs  research_tool_runtime.rs  session_cache.rs  session_interactive.rs  skills.rs  subagent_usage.rs  turn_exec.rs  turn_lifecycle.rs  turn_reservation.rs  user_input.rs  workspace_baseline.rs
crates/server/src/workspace_changes/: diff.rs  fs_snapshot.rs  git.rs  mod.rs
crates/server/tests/: README.md  acp_available_commands.rs  acp_initialization_e2e.rs  acp_permission_tool_status_contract.rs  acp_session_contract_e2e.rs  acp_session_delete.rs  acp_session_lifecycle.rs  cli_log_failures.rs  command_exec.rs  deep_research_boundary_failure.rs  deep_research_e2e.rs  end_to_end.rs  goal_continuation.rs  goal_continuation_guards.rs  goal_lifecycle_interrupts.rs  goal_title_generation.rs  model_config_e2e.rs  persistence_resume.rs  protocol_contract.rs  provider_routing.rs  session_fork_persistence.rs  session_rollback_persistence.rs  skills_integration.rs  subagent_lifecycle.rs  turn_start_persistence.rs
crates/server/tests/support/: acp_session_setup.rs  goal_continuation.rs  subagent_lifecycle.rs
crates/skills/: Cargo.toml
crates/skills/src/: config_rules.rs  injection.rs  invocation_utils.rs  lib.rs  loader.rs  manager.rs  mention_counts.rs  model.rs  render.rs  system.rs
crates/tui/: Cargo.toml  README.md
crates/tui/src/: app.rs  app_command.rs  app_event.rs  chatwidget.rs  chatwidget_tail_follow_tests.rs  chatwidget_tests.rs  custom_terminal.rs  events.rs  history_cell.rs  host.rs  inline_onboarding_tests.rs  insert_history.rs  interactive.rs  lib.rs  mcp_command_tests.rs  mcp_servers.rs  model_display_tests.rs  onboarding.rs  onboarding_widget.rs  onboarding_widget_tests.rs  research_artifact_cell.rs  slash_command.rs  startup_header.rs  startup_logo_cell.rs  status_indicator_widget.rs  theme.rs  tool_io_cell.rs  tool_rendering_e2e_tests.rs  tui.rs  worker.rs  worker_queue_compaction_tests.rs
crates/tui/src/bottom_pane/: chat_composer.rs  command_popup.rs  footer.rs  input_mode.rs  mod.rs  onboarding_view.rs  prompt_args.rs  reference_popup.rs  request_user_input_overlay.rs
crates/tui/src/chatwidget/: configuration.rs  diff_rules.rs  input.rs  permission_presets.rs  reasoning_effort.rs  render.rs  restored_session.rs  resume_browser.rs  selection.rs  session_header.rs  session_history.rs  slash_commands.rs  status_surfaces.rs  subagent_debug.rs  subagent_live_list.rs  subagent_monitor.rs  subagent_selector.rs  text_stream.rs  thinking.rs  transcript_view.rs  worker_events.rs
crates/tui/src/exec_cell/: model.rs  render.rs
crates/tui/src/streaming/: controller.rs
crates/tui/src/worker/: acp_events.rs  subagent_events.rs
(+512 files in other folders)
