[workspace]
members = [
    "crates/core",
    "crates/code-search",
    "crates/tools",
    "crates/provider",
    "crates/safety",
    "crates/tasks",
    "crates/mcp",
    "crates/network-proxy",
    "crates/protocol",
    "crates/client",
    "crates/config",
    "crates/server",
    "crates/tui",
    "crates/utils/fuzzy",
    "crates/utils/git",
    "crates/utils/paths",
    "crates/utils/process",
    "crates/utils/shell-command",
    "crates/cli",
    "crates/arg0",
    "crates/skills",
    "crates/rmcp-client",
    "crates/keyring-store",
]
resolver = "3"

[workspace.lints]

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.88.0"
version = "0.1.27"

[workspace.dependencies]
agent-client-protocol = "0.14.0"
ansi-to-tui = "7.0.0"
anyhow = "1"
arboard = { version = "3", features = ["wayland-data-control"] }
assert_matches = "1.5.0"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8", default-features = false }
base64 = "0.22.1"
bm25 = "2.3.2"
bytes = "1"
chrono = "0.4.43"
clap = { version = "4", features = ["derive"] }
colored = "2"
crossbeam-channel = "0.5.15"
crossterm = { version = "0.28", features = ["event-stream"] }
derive_more = "2"
devo-arg0 = { path = "crates/arg0" }
devo-client = { path = "crates/client" }
devo-code-search = { path = "crates/code-search" }
devo-config = { path = "crates/config" }
devo-core = { path = "crates/core" }
devo-file-search = { path = "crates/file-search" }
devo-keyring-store = { path = "crates/keyring-store" }
devo-mcp = { path = "crates/mcp" }
devo-network-proxy = { path = "crates/network-proxy" }
devo-protocol = { path = "crates/protocol" }
devo-provider = { path = "crates/provider" }
devo-rmcp-client = { path = "crates/rmcp-client" }
devo-safety = { path = "crates/safety" }
devo-server = { path = "crates/server" }
devo-skills = { path = "crates/skills" }
devo-tasks = { path = "crates/tasks" }
devo-tools = { path = "crates/tools" }
devo-tui = { path = "crates/tui" }
devo-util-fuzzy = { path = "crates/utils/fuzzy" }
devo-util-git = { path = "crates/utils/git" }
devo-util-paths = { path = "crates/utils/paths" }
devo-util-process = { path = "crates/utils/process" }
devo-util-shell-command = { path = "crates/utils/shell-command" }
diffy = "0.4.2"
dirs = "6"
fs2 = "0.4"
futures = { version = "0.3", default-features = false }
hf-hub = { version = "1.0.0-rc.1", features = ["blocking", "rustls-tls"] }
hnsw_rs = "0.3.4"
iana-time-zone = "0.1.65"
ignore = "0.4.23"
image = { version = "^0.25.9", default-features = false }
include_dir = "0.7"
insta = "1.46.3"
itertools = "0.14.0"
keyring = { version = "3.6", default-features = false }
lazy_static = "1"
libc = "0.2.182"
model2vec = "0.3.0"
notify = "8.2.0"
nucleo = { git = "https://github.com/helix-editor/nucleo.git", rev = "4253de9faabb4e5c6d81d946a5e35a90f87347ee" }
once_cell = "1.20.2"
pathdiff = "0.2"
pretty_assertions = "1.4.1"
pulldown-cmark = "0.10"
rand = "0.9"
rayon = "1.12.0"
ratatui = "0.29.0"
ratatui-macros = "0.6.0"
regex = "1"
regex-lite = "0.1.8"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls-native-roots",
    "socks",
    "stream",
] }
reqwest-eventsource = "0.6"
rmcp = { version = "0.15.0", default-features = false }
rusqlite = { version = "0.33", features = ["bundled"] }
schemars = { version = "0.8.22", features = ["chrono", "smol_str", "uuid1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
serial_test = "3.2.0"
sha2 = "0.10"
shlex = "1.3.0"
smol_str = { version = "0.3", features = ["serde"] }
strum = "0.27.2"
strum_macros = "0.28.0"
supports-color = "3.0.2"
tempfile = "3.23.0"
textwrap = "0.16"
thiserror = "2"
tiny_http = "0.12"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.28"
tokio-util = "0.7.18"
toml = "0.8"
tray-icon = { version = "0.24.1", default-features = false }
winit = { version = "0.30", default-features = false }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSString"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
] }
tree-sitter = "0.25.10"
tree-sitter-bash = "0.25"
tree-sitter-c = "0.24.2"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-containerfile = "0.8.0"
tree-sitter-cpp = "0.23.4"
tree-sitter-go = "0.25.0"
tree-sitter-ini = "1.4.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-lua = "0.5.0"
tree-sitter-php = "0.24.2"
tree-sitter-powershell = "0.26.4"
tree-sitter-python = "0.25.0"
tree-sitter-r = "1.2.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.2"
tree-sitter-scala = "0.26.0"
tree-sitter-sequel = "0.3.11"
tree-sitter-swift = "0.7.3"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-xml = "0.7.0"
tree-sitter-yaml = "0.7.2"
ts-rs = { version = "12.0.1", features = ["chrono-impl", "no-serde-warnings", "serde-json-impl", "smol_str-impl", "uuid-impl"] }
unicode-segmentation = "1.12.0"
unicode-width = "0.2"
url = "2"
urlencoding = "2.1"
uuid = { version = "1", features = ["serde", "v4", "v7"] }
vt100 = "0.16.2"
walkdir = "2.5.0"
webbrowser = "1.0"
which = "8"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[patch.crates-io]
crossterm = { git = "https://github.com/nornagon/crossterm", branch = "nornagon/color-query" }
ratatui = { git = "https://github.com/nornagon/ratatui", branch = "nornagon-v0.29.0-patch" }
