[package]
description = "CLI entry point that assembles all crates"
edition.workspace = true
license.workspace = true
name = "devo-cli"
version.workspace = true

[[bin]]
name = "devo"
path = "src/main.rs"

[dependencies]
devo-core = { workspace = true }
devo-mcp = { workspace = true }
devo-protocol = { workspace = true }
devo-provider = { workspace = true }
devo-safety = { workspace = true }
devo-server = { workspace = true }
devo-tasks = { workspace = true }
devo-tui = { workspace = true }
devo-util-paths = { workspace = true }
devo-arg0 = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
tokio-console = ["devo-arg0/tokio-console"]

[dev-dependencies]
pretty_assertions = "1"
