[package]
description = "Client transports for the Devo server protocol"
edition.workspace = true
license.workspace = true
name = "devo-client"
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
devo-protocol = { workspace = true }
devo-util-paths = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
