[package]
description = "Semble-style hybrid code retrieval for Devo workspace tools"
edition.workspace = true
license.workspace = true
name = "devo-code-search"
version.workspace = true

[lib]
name = "devo_code_search"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
bm25 = { workspace = true }
dirs = { workspace = true }
hf-hub = { workspace = true }
hnsw_rs = { workspace = true }
ignore = { workspace = true }
model2vec = { workspace = true }
notify = { workspace = true }
pathdiff = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
