[package]
description = "Message model, session state, and agent main loop"
edition.workspace = true
license.workspace = true
name = "devo-core"
version.workspace = true

[dependencies]
devo-config = { workspace = true }
devo-protocol = { workspace = true }
devo-provider = { workspace = true }
devo-safety = { workspace = true }
devo-skills = { workspace = true }
devo-tools = { workspace = true }
devo-utils = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = "0.22"
bm25 = { workspace = true }
chrono = { workspace = true }
diffy = { workspace = true }
futures = { workspace = true }
glob = { workspace = true }
iana-time-zone = { workspace = true }
portable-pty = "0.9"
rand = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shlex = { workspace = true }
smol_str = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
devo-provider = { workspace = true }
devo-safety = { workspace = true }
futures = { workspace = true }
pretty_assertions = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true }
