[package]
description = "Transport-neutral runtime protocol types and server contracts"
edition.workspace = true
license.workspace = true
name = "devo-server"
version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
devo-client = { workspace = true }
devo-core = { workspace = true }
devo-file-search = { workspace = true }
devo-mcp = { workspace = true }
devo-protocol = { workspace = true }
devo-provider = { workspace = true }
devo-safety = { workspace = true }
devo-util-fuzzy = { workspace = true }
devo-util-git = { workspace = true }
devo-util-paths = { workspace = true }
devo-util-shell-command = { workspace = true }
diffy = { workspace = true }
futures = { workspace = true }
fs2 = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
smol_str = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
pretty_assertions = "1"
tempfile = "3"
