[package]
description = "Interactive terminal UI for Devo"
edition.workspace = true
license.workspace = true
name = "devo-tui"
version.workspace = true

[lib]
name = "devo_tui"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
arboard = { workspace = true }
base64 = { workspace = true }
chrono = "0.4.43"
crossterm = { workspace = true }
derive_more = { workspace = true, features = ["is_variant"] }
devo-core = { workspace = true }
devo-protocol = { workspace = true }
devo-provider = { workspace = true }
devo-server = { workspace = true }
devo-utils = { workspace = true }
diffy = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
image = { workspace = true }
insta = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
pathdiff = { workspace = true }
pulldown-cmark = { workspace = true }
rand = { workspace = true }
ratatui = { workspace = true, features = [
    "scrolling-regions",
    "unstable-backend-writer",
    "unstable-rendered-line-info",
    "unstable-widget-ref",
] }
ratatui-macros = { workspace = true }
regex = { workspace = true }
regex-lite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
shlex = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
supports-color = { workspace = true }
syntect = "5"
tempfile = { workspace = true }
textwrap = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
    "test-util",
    "time",
] }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true, features = ["time"] }
toml = { workspace = true }
tracing = { workspace = true }
two-face = { version = "0.5", default-features = false, features = [
    "syntect-default-onig",
] }
unicode-segmentation = { workspace = true }
unicode-width = { workspace = true }
url = "2"
urlencoding = { workspace = true }
vt100 = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Console",
] }
winsplit = "0.1"

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }


[dev-dependencies]
chrono = { workspace = true }
pretty_assertions = "1"
